--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-router/node": "7.10.1",
     "@react-router/serve": "7.10.1",
     "effect": "^3.19.9",
+    "elysia": "^1.4.18",
     "isbot": "^5.1.31",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
