Refactored from monorepo to use a flatter structure.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "rootDirs": [".", "./.react-router/types"],
     "baseUrl": ".",
     "paths": {
-      "*": ["./apps/web/*"],
+      "*": ["./app/*"],
       "@rstful/shared": ["./packages/shared/src"]
     },
     "esModuleInterop": true,
