--- a/package.json
+++ b/package.json
@@ -3,17 +3,39 @@
   "private": true,
   "type": "module",
   "workspaces": [
-    "apps/*",
     "packages/*"
   ],
   "scripts": {
-    "dev": "bun --filter @rstful/web dev",
-    "dev:api": "bun --filter @rstful/api dev",
-    "build": "bun --filter @rstful/web build",
-    "start": "bun --filter @rstful/web start",
-    "typecheck": "bun --filter @rstful/web typecheck"
+    "dev": "react-router dev",
+    "dev:api": "bun --watch src/index.ts",
+    "build": "react-router build",
+    "start": "react-router-serve ./build/server/index.js",
+    "start:api": "bun src/index.ts",
+    "typecheck": "react-router typegen && tsc"
+  },
+  "dependencies": {
+    "@base-ui-components/react": "^1.0.0-rc.0",
+    "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@react-router/node": "7.10.1",
+    "@react-router/serve": "7.10.1",
+    "@rstful/shared": "workspace:*",
+    "effect": "^3.19.9",
+    "elysia": "^1.4.18",
+    "isbot": "^5.1.31",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
+    "react-router": "7.10.1"
   },
   "devDependencies": {
-    "typescript": "^5.9.2"
+    "@react-router/dev": "7.10.1",
+    "@tailwindcss/vite": "^4.1.13",
+    "@types/node": "^22",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "tailwindcss": "^4.1.13",
+    "typescript": "^5.9.2",
+    "vite": "^7.1.7",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
