--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-router/node": "7.10.1",
     "@react-router/serve": "7.10.1",
     "@rstful/shared": "workspace:*",
+    "convex": "^1.30.0",
     "effect": "^3.19.9",
     "isbot": "^5.1.31",
     "react": "^19.2.1",
