--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@auth/core": "0.37.0",
     "@base-ui-components/react": "^1.0.0-rc.0",
+    "@convex-dev/auth": "^0.0.90",
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-icons": "^1.3.2",
     "@react-router/node": "7.10.1",
