--- a/convex/tsconfig.json
+++ b/convex/tsconfig.json
@@ -7,6 +7,7 @@
     /* These settings are not required by Convex and can be modified. */
     "allowJs": true,
     "strict": true,
+    "exactOptionalPropertyTypes": true,
     "moduleResolution": "Bundler",
     "jsx": "react-jsx",
     "skipLibCheck": true,
