--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router": "7.10.1"
   },
   "devDependencies": {
+    "@effect/language-service": "^0.60.0",
     "@react-router/dev": "7.10.1",
     "@tailwindcss/vite": "^4.1.13",
     "@types/node": "^22",
