--- a/package.json
+++ b/package.json
@@ -2,9 +2,6 @@
   "name": "rstful",
   "private": true,
   "type": "module",
-  "workspaces": [
-    "packages/*"
-  ],
   "scripts": {
     "dev": "react-router dev",
     "build": "react-router build",
@@ -16,16 +13,17 @@
     "@base-ui-components/react": "^1.0.0-rc.0",
     "@convex-dev/auth": "^0.0.90",
     "@heroicons/react": "^2.2.0",
+    "@oslojs/crypto": "^1.0.1",
     "@radix-ui/react-icons": "^1.3.2",
     "@react-router/node": "7.10.1",
     "@react-router/serve": "7.10.1",
-    "@rstful/shared": "workspace:*",
     "convex": "^1.30.0",
     "effect": "^3.19.9",
     "isbot": "^5.1.31",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
-    "react-router": "7.10.1"
+    "react-router": "7.10.1",
+    "resend": "^6.6.0"
   },
   "devDependencies": {
     "@effect/language-service": "^0.60.0",
