--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -7,6 +7,9 @@
   "exports": {
     ".": "./src/index.ts"
   },
+  "dependencies": {
+    "effect": "^3.19.9"
+  },
   "devDependencies": {
     "typescript": "^5.9.2"
   }
